--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,21 @@ body {
   text-align: center;
 }
 
-.project-container {
+.project-section {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 0;
+}
+
+.static-svg {
+  width: 100%;
+  /* fill: rgb(95, 84, 194); */
+  /* fill: aqua; */
+  /* fill: rgb(27, 154, 204); */
+  fill: #fff;
+  /* height: 40vh; */
+  height: 150px;
+  position: relative;
+  left: 0;
+  top: 0;
 }
