--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,35 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  background-color: rgb(0, 0, 0);
+}
+
+.contact-section {
+  background-color: rgb(0, 0, 0);
+  height: 500px;
+}
+
+.skills-section {
+  height: 500px;
+}
+
+.about-section {
+  height: 500px;
+}
+
+.black-static-svg {
+  width: 100%;
+  /* fill: rgb(95, 84, 194); */
+  /* fill: aqua; */
+  /* fill: rgb(27, 154, 204); */
+  /* fill: #fff; */
+  fill: rgb(0, 0, 0);
+  /* height: 40vh; */
+  height: 150px;
+  position: relative;
+  vertical-align: top;
+  left: 0;
+  top: 0;
 }
 
 .static-svg {
