--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,18 @@ body {
   text-align: center;
 }
 
-.project-section {
+.project-section-dark {
   display: flex;
   flex-direction: column;
   margin: 0;
   background-color: rgb(0, 0, 0);
+}
+
+.project-section-light {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  background-color: rgb(20, 20, 20);
 }
 
 .contact-section {
