--- a/src/components/Links.css
+++ b/src/components/Links.css
@@ -2,4 +2,23 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 5rem;
+}
+
+.project-links > a {
+  padding-right: 3rem;
+  color: rgb(90, 89, 89);
+  font-size: 1.1rem;
+  font-weight: 500;
+  transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+}
+
+.project-links > a:hover {
+  color: aqua;
+  /* color: rgb(95, 84, 194); */
+  font-size: 1.2rem;
 }
