--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -32,6 +32,11 @@
   width: 350px;
   vertical-align: top;
   border: solid 2px aqua;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
 }
 
 .skills-link-div {
