--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -2,15 +2,30 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
 .skills-container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 5px;
+  border: 3px solid rgb(30, 30, 30);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+
+.svg-icon {
+  padding: 1rem 1.5rem 0 1.5rem;
   width: 2rem;
   height: 2rem;
-  margin: 1rem;
 }
 
 p {
   font-size: 0.7rem;
   color: #fff;
+  margin-top: 0.2rem;
 }
