--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -29,14 +29,23 @@
 }
 .project-img > img {
   height: 300px;
-  width: 350px;
+  width: 400px;
   vertical-align: top;
-  border: solid 2px aqua;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
+  border: 3px solid rgb(30, 30, 30);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  transition: border-color 0.3s ease-in-out;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  -ms-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+}
+
+.project-img > img:hover {
+  border-color: aqua;
 }
 
 .skills-link-div {
