--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -16,6 +16,20 @@
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+  transition: transform 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -webkit-transition: transform 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -moz-transition: transform 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -ms-transition: transform 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -o-transition: transform 0.2s ease-in-out, border-color 0.2s ease-in-out;
+}
+
+.skills-container > div:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  border-color: aqua;
 }
 
 .svg-icon {
