--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   margin-right: 5px;
+  margin-top: 5px;
   border: 3px solid rgb(30, 30, 30);
   border-radius: 4px;
   -webkit-border-radius: 4px;
