--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@ body {
   font-weight: 300;
   background-color: rgb(20, 20, 20);
 }
+
+#projects {
+  scroll-margin-top: 150px;
+}
+
+#skills {
+  scroll-margin-top: 250px;
+}
+
 .App {
   text-align: center;
 }
@@ -24,15 +33,16 @@ body {
   background-color: rgb(20, 20, 20);
 }
 
-.contact-section {
-  background-color: rgb(0, 0, 0);
-  height: 500px;
-}
-
 .skills-section {
-  height: 500px;
+  max-height: 400px;
+  margin: 5rem 0 5rem 0;
 }
 
 .about-section {
+  height: 500px;
+  background-color: rgb(0, 0, 0);
+}
+
+.contact-section {
   height: 500px;
 }
