--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,12 @@ body {
   display: flex;
 }
 
+@media screen and (max-width: 600px) {
+  .about-section {
+    height: fit-content;
+  }
+}
+
 .contact-section {
   height: 400px;
   display: flex;
