--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -62,7 +62,7 @@ hr {
 }
 
 .social-media {
-  padding: 1rem 2rem 0 2rem;
+  padding: 0;
   margin-top: 5px;
   transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
   -webkit-transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
