--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,17 +19,20 @@
   color: #fff;
   margin: 2rem 3rem 2rem 1rem;
   font-weight: 100;
-  transition: color 0.3s ease-in-out, font-size 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  -webkit-transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  -moz-transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  -ms-transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .nav-bar-links > a:hover {
   color: aqua;
-  /* color: rgb(95, 84, 194); */
-  font-size: 1.2rem;
+  transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -o-transform: scale(1.3);
 }
 
 /* language-change styles */
@@ -53,20 +56,25 @@
 @media screen and (max-width: 500px) {
   .nav-bar {
     left: 0;
-    justify-content: center;
+    /* justify-content: center; */
   }
-  .nav-bar > a {
-    margin: 2rem 2rem 2rem 1rem;
+  .nav-bar-links > a {
+    margin: 2rem 1rem 2rem 1rem;
   }
 }
 
 @media screen and (max-width: 370px) {
   .nav-bar {
     left: 0;
-    justify-content: center;
     font-size: smaller;
   }
   .nav-bar > a {
-    margin: 2rem 1rem 2rem 1rem;
+    margin: 2rem 0.5rem 2rem 1rem;
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .nav-bar {
+    font-size: x-small;
   }
 }
