--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 .skills-section {
-  max-height: 400px;
+  height: 400px;
   margin: 5rem 0 5rem 0;
   display: flex;
 }
@@ -49,13 +49,17 @@ body {
   display: flex;
 }
 
+.contact-section {
+  height: 400px;
+  display: flex;
+}
+
 @media screen and (max-width: 600px) {
   .about-section {
     height: fit-content;
   }
-}
 
-.contact-section {
-  height: 400px;
-  display: flex;
+  .skills-section {
+    height: fit-content;
+  }
 }
