--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -116,3 +116,9 @@ hr {
   padding: 1rem;
   margin: 0;
 }
+
+@media screen and (max-width: 340px) {
+  .email-container p {
+    font-size: 0.9rem;
+  }
+}
