--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -80,3 +80,12 @@
     text-align: center;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .project-about > p {
+    color: inherit;
+    display: flex;
+    font-size: 0.9rem;
+    padding-left: 0.5rem;
+  }
+}
