add translation for all but project section.

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -8,6 +8,7 @@ div .about-text {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  max-width: 800px;
 }
 
 div .about-text p {
