--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -9,15 +9,18 @@
 }
 
 .project-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   float: left;
   text-align: left;
+  padding-left: 1rem;
 }
 
 .project-about > p {
   color: inherit;
   display: flex;
   font-size: 1rem;
-  padding-left: 0.5rem;
 }
 
 .project-contents {
